@@ -2,6 +2,7 @@ require 'statsample/regression/simple'
 require 'statsample/regression/multiple'
 require 'statsample/regression/multiple/alglibengine'
 require 'statsample/regression/multiple/rubyengine'
+require 'statsample/regression/multiple/gslengine'
 
 module Statsample
     # Module for regression procedures 
