@@ -27,6 +27,33 @@ class StatsampleRegressionTestCase < Test::Unit::TestCase
         assert_in_delta(3.035,lr.f,0.001)
         
     end
+
+
+    def test_multiple_regression_gsl
+	    if HAS_GSL
+        @a=[1,3,2,4,3,5,4,6,5,7].to_vector(:scale)
+        @b=[3,3,4,4,5,5,6,6,4,4].to_vector(:scale)
+        @c=[11,22,30,40,50,65,78,79,99,100].to_vector(:scale)
+        @y=[3,4,5,6,7,8,9,10,20,30].to_vector(:scale)
+        ds={'a'=>@a,'b'=>@b,'c'=>@c,'y'=>@y}.to_dataset
+        lr=Statsample::Regression::Multiple::GslEngine.new(ds,'y')
+        model_test(lr)
+        predicted=[1.7857, 6.0989, 3.2433, 7.2908, 4.9667, 10.3428, 8.8158, 10.4717, 23.6639, 25.3198]
+        c_predicted=lr.predicted
+        predicted.each_index{|i|
+            assert_in_delta(predicted[i],c_predicted[i],0.001)
+        }
+        residuals=[1.2142, -2.0989, 1.7566, -1.29085, 2.033, -2.3428, 0.18414, -0.47177, -3.66395, 4.6801]
+        c_residuals=lr.residuals
+        residuals.each_index{|i|
+            assert_in_delta(residuals[i],c_residuals[i],0.001)
+        }
+	else
+		puts "Regression::Multiple::AlglibEngine not tested (no Alglib)"
+	end
+    end
+
+
     def test_multiple_regression_alglib
 	    if HAS_ALGIB
         @a=[1,3,2,4,3,5,4,6,5,7].to_vector(:scale)
@@ -59,7 +86,7 @@ class StatsampleRegressionTestCase < Test::Unit::TestCase
         s_coeffs={'a'=>0.151,'b'=>-0.547,'c'=>0.997}
         cs_coeefs=lr.standarized_coeffs
         s_coeffs.each_key{|k|
-            assert_in_delta(s_coeffs[k],cs_coeefs[k],0.001)
+            assert_in_delta(s_coeffs[k], cs_coeefs[k],0.001)
         }
         assert_in_delta(639.6,lr.sst,0.001)
         assert_in_delta(583.76,lr.ssr,0.001)
@@ -86,7 +113,7 @@ class StatsampleRegressionTestCase < Test::Unit::TestCase
         assert_in_delta(4.559, lr.constant_se,0.001)
         assert_in_delta(2.419, lr.constant_t,0.001)
     end
-    def test_regression_pairwise
+    def test_regression_rubyengine
         @a=[nil,1,3,2,4,3,5,4,6,5,7].to_vector(:scale)
         @b=[nil,3,3,4,4,5,5,6,6,4,4].to_vector(:scale)
         @c=[nil,11,22,30,40,50,65,78,79,99,100].to_vector(:scale)
